fixed empty spacing

--- a/carlos-Dgreat/src/index.css
+++ b/carlos-Dgreat/src/index.css
@@ -10,7 +10,7 @@
   outline: none !important;
 }
 
-@theme {
+:root {
   --breakpoint-xs: 30rem;     /* 480px */
   --breakpoint-sm: 40rem;     /* 640px */
   --breakpoint-md: 48rem;     /* 768px */
